# epub-translator

./: .gitignore  BUGS.md  Cargo.toml  LICENSE  README.md  treat-trace.sh
src/: lib.rs  main.rs
src/deepl/: languages.json  languages.sh  mod.rs  models.rs  translate.sh  usage.sh
src/epub/: mod.rs
src/xhtml/: mod.rs
tests/benchmark/: bench.csv  performance_analysis.md  requirements.txt  translation_performance_analysis.ipynb
tests/data/: lorem.xhtml  lorem_expected.xhtml
tests/data/epub_folder/META_INF/: container.xml
