[package]
name = "epub-translator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
walkdir = "2.3.3"
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.0"