[package]
name = "epub-translator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
walkdir = "2.3.3"
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
warp = {version = "0.3", optional = true}
serde_json = {version = "1.0", optional = true}

[dev-dependencies]
tempfile = "3.10.0"

[features]
mock_server = ["warp", "serde_json"]

[[bin]]
name = "mock_server"
path = "src/bin/mock_server.rs"
required-features = ["mock_server"]